--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "private": true,
+  "packageManager": "pnpm@10.23.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf .next out dist",
     "clean:all": "rm -rf .next out dist node_modules && pnpm install",
@@ -29,5 +30,10 @@
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6"
   }
 }
