--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
     "@types/react-dom": "^19.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.1.0",
+    "gray-matter": "^4.0.3",
     "next": "^16.0.0",
     "postcss": "^8.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.0"
   },
